better list management + speed-up end of making file